Fixed image distort.

--- a/styles/story_comment.css
+++ b/styles/story_comment.css
@@ -130,9 +130,11 @@ body {
     }
 
     .profilePic {
-        height: 50px;
-        width: 50px;
-        border-radius: 100%;
+        max-height: 50px;
+        max-width: 50px;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 50%;
         z-index: 1;
     }
 
@@ -562,9 +564,11 @@ body {
 
     .profilePic {
         float: left;
-        width: 42px;
-        height: 42px;
-        border-radius: 100%;
+        max-width: 42px;
+        max-height: 42px;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 50%;
     }
 
     .info .material-symbols-outlined {
